solved pointer alignment issue on Go To Recipe buttons.

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ input {
     font-size: 20px;
     font-style: italic;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .recipe img {
